# typedtoolz

./: .gitignore  NOTICE  README.md  bpcheck.json  bpcheck.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  toolz_tests.py
docs/: toolz_import_api.md
docs/typing_bs/: metaclass_static_callables.md
scripts/: gen_bring_stubs.py  gen_compose_stubs.py  gen_curried_stubs.py  gen_curriedv_stubs.py  gen_custom_curried_stubs.py  gen_element_access_stubs.py.bak  gen_flow_stubs.py  gen_juxt_stubs.py  gen_nth_stubs.py  gen_partial_stubs.py  gen_pipe_stubs.py  gen_thread_stubs.py  gen_unzip_stubs.py
src/typedtoolz/: __init__.py  _takewhile_acc.py  _top_level.py
src/typedtoolz/dicttoolz/: __init__.py  _assoc.py  _assoc.pyi  _filters.py  _filters.pyi  _mappers.py  _mappers.pyi  _merge.py  _merge.pyi
src/typedtoolz/functoolz/: __init__.py  _apply.py  _apply.pyi  _complement.py  _complement.pyi  _compose.py  _compose.pyi  _compose_left.py  _compose_left.pyi  _curry.py  _curry.pyi  _curryv.py  _curryv.pyi  _defer.py  _do.py  _do.pyi  _excepts.py  _excepts.pyi  _finalizer.py  _finalizer.pyi  _flip.py  _flip.pyi  _flow.py  _instanceproperty.py  _instanceproperty.pyi  _introspection.py  _introspection.pyi  _juxt.py  _juxt.pyi  _memoize.py  _memoize.pyi  _partial.py  _partial.pyi  _pipe.py  _reduce.py  _return_parameter.py  _star.py  (+17 more)
tests/: test_curry.py  test_map.py  test_reduce.py  test_return_parameter.py
tests/functoolz/: test_defer.py  test_exceptions.py  test_flow.py  test_reduce.py  test_with.py
tests/itertoolz/: test_map.py  test_takewhile_acc.py
(+42 files in other folders)
