[project]
name = "typedtoolz"
version = "0.1.0"
description = "Custom toolz-style functional utility library"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "toolz>=1.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

